--- a/css/styles.css
+++ b/css/styles.css
@@ -8,14 +8,39 @@ body {
     padding-top: 68px;
     padding-bottom: 40px;
     background-color: #fff;
+    color: #000;
+}
+body * {
+    box-sizing: border-box;
 }
 /*Basic site containers*/
 .container {
+    width: 100%;
     max-width: 1180px;
     margin: 0 auto;
 }
+body[screen=md] .container {
+    max-width: 860px;
+}
+body[screen=sm] .container {
+    width: 80%;
+    margin: 0 10%;
+}
+body[screen=xs] .container {
+    width: 85%;
+    margin: 0 7.5%;
+}
 .content-section {
     padding: 40px 0;
+}
+body[screen=md] .container {
+    padding: 30px 0;
+}
+body[screen=sm] .container {
+    padding: 20px 0;
+}
+body[screen=xs] .container {
+    padding: 16px 0;
 }
 /*Flexbox containers*/
 .flex-container {
@@ -50,6 +75,12 @@ header {
     left: 0;
     z-index: 99;
 }
+header .container {
+    padding: 0;
+}
+body[screen=md] header .container, body[screen=sm] header .container, body[screen=xs] header .container {
+    padding: 0;
+}
 header ul {
     margin: 0 auto;
     max-width: 640px;
@@ -66,6 +97,10 @@ header ul li {
     font-weight: 500;
     color: #212226;
     font-family: "Heebo", sans-serif;
+}
+body[screen=sm] header ul li, body[screen=xs] header ul li {
+    font-size: 18px;
+    line-height: 1.3;
 }
 header ul li:hover {
     cursor: pointer;
@@ -113,18 +148,48 @@ header.attached ul li.active:before {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
+    width: 100%;
 }
 .content-header h1 {
     margin: 0 auto;
     font-size: 54px;
-    line-height: 60px;
+    line-height: 1.2;
     text-align: center;
     font-family: "Heebo", sans-serif;
 }
+body[screen=md] .content-header {
+    padding-left: 50px;
+    padding-right: 50px;
+}
+body[screen=sm] .content-header {
+    padding: 75px 10% 75px;
+    margin-bottom: 20px;
+}
+body[screen=xs] .content-header {
+    padding: 50px 7.5% 50px;
+    margin-bottom: 15px;
+}
+body[screen=md] .content-header h1 {
+    font-size: 48px;
+}
+body[screen=sm] .content-header h1 {
+    font-size: 40px;
+}
+body[screen=xs] .content-header h1 {
+    font-size: 36px;
+}
 .content-header p {
     font-size: 18px;
-    line-height: 24px;
+    line-height: 1.3;
+    font-weight: 700;
     text-align: center;
+}
+body[screen=sm] .content-header p {
+    margin: 10px 0;
+}
+body[screen=xs] .content-header p {
+    font-size: 16px;
+    margin: 8px 0;
 }
 .content-header .contact-icons {
     margin-top: 9px; 
@@ -139,7 +204,19 @@ header.attached ul li.active:before {
     margin-right: 16px;
     margin-left: 16px;
     transition: color 0.5s;
-}   
+}
+body[screen=sm] .content-header .contact-icons a {
+    width: 60px;
+    height: 60px;
+    margin-right: 12px;
+    margin-left: 12px;
+}
+body[screen=xs] .content-header .contact-icons a {
+    width: 48px;
+    height: 48px;
+    margin-right: 8px;
+    margin-left: 8px;
+}    
 .content-header .contact-icons a:visited {
     color: #000;
 }    
@@ -151,6 +228,12 @@ header.attached ul li.active:before {
     font-size: 60px;
     line-height: 1;
 }
+body[screen=sm] .content-header .contact-icons a span { 
+    font-size: 48px;
+}
+body[screen=xs] .content-header .contact-icons a span {
+    font-size: 40px;
+}    
 .content-header .contact-icons a:hover {
     color: #fafafa;
 }    
@@ -188,6 +271,12 @@ header.attached ul li.active:before {
 .content-section.active h2:before {
     width: 100%;
 }
+body[screen=sm] .content-section h2 {
+    font-size: 32px;
+}
+body[screen=xs] .content-section h2 {
+    font-size: 24px;
+}
 /*About*/
 .content-section.about .image {
     width: 240px;
@@ -198,6 +287,7 @@ header.attached ul li.active:before {
 }
 .content-section.about .image img {
     width: 100%;
+    height: 100%;
     box-sizing: border-box;
 }
 .content-section.about .images {
@@ -246,6 +336,10 @@ header.attached ul li.active:before {
 .content-section.about .text-section:first-of-type .text, .content-section.about .text-section:nth-of-type(3) .text {
     padding-right: 24px;
     padding-left: 24px;
+}
+body[screen=xs] .content-section.about .text-section .text {
+    padding-right: 18px;
+    padding-left: 18px;
 }          
 .content-section.about .text {
     width: calc(100% - 276px);
@@ -255,7 +349,35 @@ header.attached ul li.active:before {
     font-size: 18px;
     line-height: 24px;
     margin: 1em 0;
+}
+body[screen=sm] .content-section.about .text-section {
+    align-items: flex-start;
 }   
+body[screen=sm] .content-section.about .image {
+    width: 180px;
+}
+body[screen=sm] .content-section.about .text-section .text {
+    width: calc(100% - 180px);
+}
+body[screen=sm] .content-section.about .text-section .text p, body[screen=xs] .content-section.about .text-section .text p {
+    font-size: 16px;
+}
+body[screen=xs] .content-section.about .text-section {
+    flex-wrap: wrap;   
+}    
+body[screen=xs] .content-section.about .text-section .image {
+    width: 100%;
+    height: auto;
+    order: 1;
+}
+body[screen=xs] .content-section.about .text-section .image img {
+    width: 100%;
+    height: auto;
+}
+body[screen=xs] .content-section.about .text-section .text {
+    order: 2; 
+    width: 100%;  
+}    
 /*Skills*/
 .content-section.skills .skillset {
     width: calc(20% - 12px);
@@ -283,6 +405,10 @@ header.attached ul li.active:before {
     justify-content: center;
     align-items: center;
 }
+body[screen=xs] .content-section.skills h3 {
+    font-size: 18px;
+    line-height: 24px; 
+}
 .content-section.skills .skillset ul {
     margin: 12px 9px;
     padding-left: 21px;
@@ -290,15 +416,69 @@ header.attached ul li.active:before {
 .content-section.skills .skillset ul li {
     font-size: 18px;
     line-height: 21px;
+}
+body[screen=xs].content-section.skills .skillset ul li {
+    font-size: 16px;
+    line-height: 1.167;
+}
+body[screen=sm] .content-section.skills .skillset {
+    width: calc(33.333% - 10px);
+}
+body[screen=sm] .content-section.skills .skillset:nth-of-type(-n+ 3) {
+    margin-bottom: 15px;
+}
+body[screen=sm] .content-section.skills .skillset:nth-of-type(3) {
+    margin-right: 0;
+}
+body[screen=xs] .content-section.skills .skillset {
+    width: calc(50% - 5px);
+    margin-left: 5px;
+    margin-right: 5px;
+}
+@media screen and (max-width: 479px) {
+    body[screen=xs] .content-section.skills .skillset {
+        width: calc(100%);
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+body[screen=xs] .content-section.skills .skillset:nth-of-type(-n+ 4) {
+    margin-bottom: 10px;
+}    
+body[screen=xs] .content-section.skills .skillset:nth-of-type(odd) {
+    margin-left: 0;
+}
+body[screen=xs] .content-section.skills .skillset:nth-of-type(even) {
+    margin-right: 0;   
 }    
 /*Portfolio*/
 .content-section.portfolio .item {
     width: calc(50% - 20px);
     margin-bottom: 40px;
 }
+body[screen=md] .content-section.portfolio .item {
+    width: calc(50% - 15px);
+    margin-bottom: 30px;
+}
+body[screen=sm] .content-section.portfolio .item {
+    width: calc(50% - 10px);
+    margin-bottom: 20px;
+}
+body[screen=xs] .content-section.portfolio .item {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 20px;
+}
 .content-section.portfolio .item:nth-of-type(1), .content-section.portfolio .item:nth-of-type(4), .content-section.portfolio .item:nth-of-type(5), .content-section.portfolio .item:nth-of-type(8) {
     background-color: #eee;
 }
+body[screen=xs] .content-section.portfolio .item:nth-of-type(odd) { 
+    background-color: #eee;
+}
+body[screen=xs] .content-section.portfolio .item:nth-of-type(even) {
+    background-color: #fff;
+}    
 .content-section.portfolio .item:nth-of-type(n+7) {
     margin-bottom: 0;
 }    
@@ -313,12 +493,23 @@ header.attached ul li.active:before {
     height: 100%;
     position: absolute;
     top: 0;
-    left: 0;
-    background: linear-gradient(180deg, rgba(33,34,38,1) 11%, rgba(101,103,112,0.2) 52%, rgba(16,17,17,0.8) 100%);
-    opacity: 0;
-    visibility: hidden;
+    left: -100%;
+    background-color: rgb(204, 160, 104);
+    mix-blend-mode: hue;
     z-index: 1;
-    transition: opacity 0.5s, visibility 0.5s;
+    transition: left 0.5s;
+}
+.content-section.portfolio .item .image:after {
+    content: " ";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    background-color: rgba(33, 34, 38, .65);
+    z-index: 1;
+    transition: left 0.5s;
 }
 .content-section.portfolio .item .image img {
     display: block;
@@ -332,7 +523,7 @@ header.attached ul li.active:before {
     font-family: "Heebo", sans-serif;
     font-size: 24px;
     line-height: 32px;
-    color: #cca068;
+    color: #fff;
     padding-bottom: 8px;
     opacity: 0;
     visibility: hidden;
@@ -351,18 +542,35 @@ header.attached ul li.active:before {
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: #cca068;
+    background-color: #fff;
     z-index: 1;
     transition: width 0.5s;
 }    
 .content-section.portfolio .item .image a:hover:before {
     width: 100%;
 }
-.content-section.portfolio .item .image:hover:before {
+.content-section.portfolio .item .image:hover:before, .content-section.portfolio .item .image:hover:after {
+    visibility: visible;
+    opacity: 1;
+    left: 0;
+}
+body[screen=sm] .content-section.portfolio .item .image:before, body[screen=sm] .content-section.portfolio .item .image:after {
+    transition: none;
+    left: 0;
+}
+body[screen=xs] .content-section.portfolio .item .image:before, body[screen=xs] .content-section.portfolio .item .image:after {
+    transition: none;
+    left: 0;
+}    
+.content-section.portfolio .item .image:hover a {
     visibility: visible;
     opacity: 1;
 }
-.content-section.portfolio .item .image:hover a {
+body[screen=sm] .content-section.portfolio .item .image a {
+    visibility: visible;
+    opacity: 1;
+} 
+body[screen=xs] .content-section.portfolio .item .image a {
     visibility: visible;
     opacity: 1;
 }
@@ -407,6 +615,10 @@ header.attached ul li.active:before {
 }    
 .content-section.portfolio .item .text > a:hover:before {
     width: 100%;
+}
+body[screen=xs] .content-section.portfolio .item .text p, body[screen=xs] .content-section.portfolio .item .text a, body[screen=sm] .content-section.portfolio .item .text p, body[screen=sm] .content-section.portfolio .item .text a {   
+    font-size: 16px;
+    line-height: 1.3;
 }    
 /*Contact*/
 .content-section.contact {
@@ -417,6 +629,10 @@ header.attached ul li.active:before {
     font-weight: 500;
     line-height: 24px;
     margin: 0 0 24px;
+}
+body[screen=sm] .content-section.contact p, body[screen=xs] .content-section.contact p {
+    font-size: 16px;
+    line-height: 1.3;
 }
 .content-section.contact a {
     display: inline-block;
@@ -430,6 +646,10 @@ header.attached ul li.active:before {
     transition: color 0.5s;
     padding-bottom: 6px;
     position: relative;
+}
+body[screen=sm] .content-section.contact a, body[screen=xs] .content-section.contact a {
+    font-size: 20px;
+    line-height: 1.1667;
 }
 .content-section.contact a:before {
     content: " ";
@@ -469,6 +689,9 @@ footer {
     padding: 0.5em 0;
     z-index: 99;
 }
+body[screen=md] footer .container, body[screen=sm] footer .container, body[screen=xs] footer .container {
+    padding: 0;
+}
 footer .flex-container > * {
     font-size: 18px;
     margin-left: 6px;
@@ -484,4 +707,12 @@ footer .flex-container > *:last-of-type {
 footer .flex-container a:hover {
     color: #cca068;
     text-decoration: none;
+}
+body[screen=xs] footer .flex-container > * {
+    font-size: 16px;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+body[screen=xs] footer .flex-container > * {
+    margin-left: 6px;
 }
